// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Clients confirms & clears list 1`] = `
<div
  data-testid="tableClients"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Patterns
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text />
          </td>
          <td>
            <column-text>
              clientA
            </column-text>
          </td>
          <td>
            <column-text>
              1235551234
            </column-text>
          </td>
          <td>
            <column-text />
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Clients confirms & clears list 2`] = `
<div
  data-testid="tableClients"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Patterns
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text />
          </td>
          <td>
            <column-text>
              clientA
            </column-text>
          </td>
          <td>
            <column-text>
              1235551234
            </column-text>
          </td>
          <td>
            <column-text />
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Confirm
  </button>
</div>
`;

exports[`Clients confirms & clears list 3`] = `
<div
  data-testid="tableClients"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Patterns
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Clients enters another into list 1`] = `
<div
  data-testid="tableClients"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Patterns
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text />
          </td>
          <td>
            <column-text>
              clientA
            </column-text>
          </td>
          <td>
            <column-text>
              1235551234
            </column-text>
          </td>
          <td>
            <column-text />
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Clients enters another into list 2`] = `
<div
  data-testid="tableClients"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Patterns
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text />
          </td>
          <td>
            <column-text>
              clientA
            </column-text>
          </td>
          <td>
            <column-text>
              1235551234
            </column-text>
          </td>
          <td>
            <column-text />
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit1"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel1"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
        <tr>
          <td>
            <column-text>
              14
            </column-text>
          </td>
          <td>
            <column-text>
              clientC
            </column-text>
          </td>
          <td>
            <column-text>
              0005551113
            </column-text>
          </td>
          <td>
            <column-text />
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit13"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel13"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Clients enters into list 1`] = `
<div
  data-testid="tableClients"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Patterns
          </th>
        </tr>
      </thead>
      <tbody>
        <tr>
          <td>
            <column-text>
              12
            </column-text>
          </td>
          <td>
            <column-text>
              clientB
            </column-text>
          </td>
          <td>
            <column-text>
              0005551112
            </column-text>
          </td>
          <td>
            <column-text />
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonEdit11"
              type="button"
            >
              Edit
            </button>
          </td>
          <td>
            <button
              class="btn btn-primary"
              data-testid="buttonDel11"
              type="button"
            >
              Del
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Clients renders page 1`] = `
<div
  data-testid="tableClients"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Name
          </th>
          <th>
            Phone
          </th>
          <th>
            Patterns
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Invoices renders page 1`] = `
<div
  data-testid="tableInvoices"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            InvoiceRef
          </th>
          <th>
            ClientRef
          </th>
          <th>
            Date
          </th>
          <th>
            Summary
          </th>
          <th>
            Total
          </th>
          <th>
            Send
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Receipts renders page 1`] = `
<div
  data-testid="tableReceipts"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            Ref
          </th>
          <th>
            Date
          </th>
          <th>
            Client
          </th>
          <th>
            Total
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
  <button
    class="btn btn-primary"
    data-testid="buttonAdd"
    type="button"
  >
    Add
  </button>
  <button
    class="btn btn-primary"
    data-testid="buttonClear"
    type="button"
  >
    Clear
  </button>
</div>
`;

exports[`Settings renders page 1`] = `
<div
  data-testid="tableSettings"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <tbody>
        <tr>
          <td
            colspan="7"
          >
            <div>
              <div>
                <b>
                  Client Prefix
                </b>
              </div>
              <div>
                <column-text>
                  C
                </column-text>
              </div>
            </div>
            <div>
              <div>
                <b>
                  Client Next
                </b>
              </div>
              <div>
                <column-text>
                  1
                </column-text>
              </div>
            </div>
            <div>
              <div>
                <b>
                  Invoice Prefix
                </b>
              </div>
              <div>
                <column-text>
                  I
                </column-text>
              </div>
            </div>
            <div>
              <div>
                <b>
                  Invoice Next
                </b>
              </div>
              <div>
                <column-text>
                  1
                </column-text>
              </div>
            </div>
            <div>
              <div>
                <b>
                  Receipt Prefix
                </b>
              </div>
              <div>
                <column-text>
                  R
                </column-text>
              </div>
            </div>
            <div>
              <div>
                <b>
                  Receipt Next
                </b>
              </div>
              <div>
                <column-text>
                  1
                </column-text>
              </div>
            </div>
            <div>
              <div>
                <b />
              </div>
              <div>
                <button
                  class="btn btn-primary"
                  data-testid="buttonEdit1"
                  type="button"
                >
                  Edit
                </button>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Statements renders page 1`] = `
<div
  data-testid="tableStatements"
>
  <div
    style="overflow: auto; max-height: 80vh;"
  >
    <table
      class="table table-striped table-bordered table-hover"
    >
      <thead>
        <tr>
          <th>
            ClientRef
          </th>
          <th>
            BalanceDue
          </th>
          <th>
            Send
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</div>
`;
